--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ body .h1 {
   display: block;
   margin-top: 3rem;
   margin-bottom: 1rem;
-  color: #2bbc8a;
+  color: #49438a;
   letter-spacing: 0.01em;
   font-weight: 700;
   font-style: normal;
@@ -425,7 +425,7 @@ body table {
 }
 body th {
   padding: 8px;
-  border-bottom: 1px dashed #666;
+  border-bottom: 1px dashed #276db0;
   color: #383838;
   font-weight: bold;
   font-size: 13px;
@@ -518,13 +518,13 @@ body {
   background-repeat: repeat-x;
 }
 .content a:hover {
-  background-image: linear-gradient(transparent, transparent 4px, #d480aa 4px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 4px, #276db0 4px, #276db0);
 }
 .content a.icon {
   background: none;
 }
 .content a.icon:hover {
-  color: #d480aa;
+  color: #276db0;
 }
 .content h1 a,
 .content .h1 a,
@@ -544,7 +544,7 @@ body {
 .content h4 a:hover,
 .content h5 a:hover,
 .content h6 a:hover {
-  background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 6px, #276db0 6px, #276db0);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -555,7 +555,7 @@ body {
   text-decoration: none;
 }
 .content h6 a:hover {
-  background-image: linear-gradient(transparent, transparent 6px, #d480aa 6px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 6px, #276db0 6px, #276db0);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -624,7 +624,7 @@ body {
   background-repeat: no-repeat;
 }
 #header #nav {
-  color: #2bbc8a;
+  color: #49438a;
   letter-spacing: 0.01em;
   font-weight: 200;
   font-style: normal;
@@ -638,10 +638,10 @@ body {
 }
 #header #nav ul a {
   margin-right: 15px;
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header #nav ul a:hover {
-  background-image: linear-gradient(transparent, transparent 5px, #2bbc8a 5px, #2bbc8a);
+  background-image: linear-gradient(transparent, transparent 5px, #49438a 5px, #49438a);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -650,7 +650,7 @@ body {
   display: inline-block;
   margin-right: 15px;
   border-right: 1px dotted;
-  border-color: #2bbc8a;
+  border-color: #49438a;
   vertical-align: middle;
 }
 #header #nav ul .icon {
@@ -712,7 +712,7 @@ body {
   background: none;
 }
 #header-post a.icon:hover {
-  color: #d480aa;
+  color: #276db0;
 }
 #header-post ol {
   list-style-type: none;
@@ -737,7 +737,7 @@ body {
   margin-left: 15px;
 }
 #header-post #menu-icon:hover {
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header-post #menu-icon-tablet {
   float: right;
@@ -745,7 +745,7 @@ body {
   margin-left: 15px;
 }
 #header-post #menu-icon-tablet:hover {
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header-post #top-icon-tablet {
   position: fixed;
@@ -755,17 +755,17 @@ body {
   margin-left: 15px;
 }
 #header-post #top-icon-tablet:hover {
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header-post .active {
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header-post #menu {
   display: none;
   margin-right: 2rem;
 }
 #header-post #nav {
-  color: #2bbc8a;
+  color: #49438a;
   letter-spacing: 0.01em;
   font-weight: 200;
   font-style: normal;
@@ -776,16 +776,16 @@ body {
 }
 #header-post #nav ul a {
   margin-right: 15px;
-  color: #2bbc8a;
+  color: #49438a;
 }
 #header-post #nav ul a:hover {
-  background-image: linear-gradient(transparent, transparent 5px, #2bbc8a 5px, #2bbc8a);
+  background-image: linear-gradient(transparent, transparent 5px, #49438a 5px, #49438a);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
 }
 #header-post #nav ul li {
-  border-right: 1px dotted #2bbc8a;
+  border-right: 1px dotted #49438a;
 }
 #header-post #nav ul li:last-child {
   margin-right: 0;
@@ -829,7 +829,7 @@ body {
   text-align: right;
 }
 #header-post #toc a:hover {
-  color: #d480aa;
+  color: #276db0;
 }
 #header-post #toc .toc-level-1 > .toc-link {
   display: none;
@@ -839,15 +839,15 @@ body {
   font-size: 0.8rem;
 }
 #header-post #toc .toc-level-2:before {
-  color: #2bbc8a;
+  color: #49438a;
   content: "#";
 }
 #header-post #toc .toc-level-3 {
-  color: #666;
+  color: #276db0;
   font-size: 0.7rem;
 }
 #header-post #toc .toc-level-4 {
-  color: #525252;
+  color: #1f578d;
   font-size: 0.4rem;
 }
 #header-post #toc .toc-level-5 {
@@ -915,7 +915,7 @@ body {
   left: 0;
   z-index: 5000000;
   width: 100%;
-  border-top: 1px solid #666;
+  border-top: 1px solid #276db0;
   background: #fafafa;
   transition: opacity 0.2s;
 }
@@ -928,7 +928,7 @@ body {
   background: none;
 }
 #footer-post a.icon:hover {
-  color: #d480aa;
+  color: #276db0;
 }
 #footer-post #nav-footer {
   padding-right: 1rem;
@@ -937,11 +937,11 @@ body {
   text-align: center;
 }
 #footer-post #nav-footer a {
-  color: #2bbc8a;
+  color: #49438a;
   font-size: 1em;
 }
 #footer-post #nav-footer a:hover {
-  background-image: linear-gradient(transparent, transparent 5px, #2bbc8a 5px, #2bbc8a);
+  background-image: linear-gradient(transparent, transparent 5px, #49438a 5px, #49438a);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -972,7 +972,7 @@ body {
 #footer-post #actions-footer a {
   display: inline-block;
   padding-left: 1rem;
-  color: #2bbc8a;
+  color: #49438a;
 }
 #footer-post #share-footer {
   padding-right: 1rem;
@@ -1009,7 +1009,7 @@ body {
   line-height: 30px;
 }
 #footer-post #toc-footer a:hover {
-  color: #d480aa;
+  color: #276db0;
 }
 #footer-post #toc-footer .toc-level-1 > .toc-link {
   display: none;
@@ -1019,11 +1019,11 @@ body {
   font-size: 0.8rem;
 }
 #footer-post #toc-footer .toc-level-2:before {
-  color: #2bbc8a;
+  color: #49438a;
   content: "#";
 }
 #footer-post #toc-footer .toc-level-3 {
-  color: #666;
+  color: #276db0;
   font-size: 0.7rem;
   line-height: 15px;
 }
@@ -1056,7 +1056,7 @@ body {
   display: block;
   margin-right: 16px;
   min-width: 100px;
-  color: #666;
+  color: #276db0;
   font-size: 14px;
 }
 @media (min-width: 480px) {
@@ -1105,7 +1105,7 @@ article .content h2:before {
   position: absolute;
   top: -4px;
   left: -1rem;
-  color: #2bbc8a;
+  color: #49438a;
   content: "#";
   font-weight: bold;
   font-size: 1.2rem;
@@ -1137,7 +1137,7 @@ article .content blockquote {
   margin: 1rem 10px;
   padding: 0.5em 10px;
   background: inherit;
-  color: #2bbc8a;
+  color: #276db0;
   quotes: "\201C" "\201D" "\2018" "\2019";
   font-weight: bold;
 }
@@ -1146,7 +1146,7 @@ article .content blockquote p {
 }
 article .content blockquote:before {
   margin-right: 0.25em;
-  color: #2bbc8a;
+  color: #276db0;
   content: "\201C";
   vertical-align: -0.4em;
   font-size: 2em;
@@ -1154,16 +1154,16 @@ article .content blockquote:before {
 }
 article .content blockquote footer {
   margin: line-height 0;
-  color: #666;
+  color: #276db0;
   font-size: 12px;
 }
 article .content blockquote footer a {
-  background-image: linear-gradient(transparent, transparent 5px, #666 5px, #666);
-  color: #666;
+  background-image: linear-gradient(transparent, transparent 5px, #276db0 5px, #276db0);
+  color: #276db0;
 }
 article .content blockquote footer a:hover {
-  background-image: linear-gradient(transparent, transparent 4px, #858585 4px, #858585);
-  color: #858585;
+  background-image: linear-gradient(transparent, transparent 4px, #3e8bd4 4px, #3e8bd4);
+  color: #3e8bd4;
 }
 article .content blockquote footer cite:before {
   padding: 0 0.5em;
@@ -1186,7 +1186,7 @@ article .content .caption {
   position: relative;
   display: block;
   margin-top: 0.5em;
-  color: #666;
+  color: #276db0;
   text-align: center;
   font-size: 0.9em;
 }
@@ -1196,7 +1196,7 @@ article .content .caption {
   line-height: 1.25;
 }
 .article-tag .tag-link {
-  background-image: linear-gradient(transparent, transparent 10px, #d480aa 10px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 10px, #276db0 10px, #276db0);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -1205,7 +1205,7 @@ article .content .caption {
   content: "#";
 }
 .article-category .category-link {
-  background-image: linear-gradient(transparent, transparent 10px, #d480aa 10px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 10px, #276db0 10px, #276db0);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
@@ -1235,7 +1235,7 @@ article .content .caption {
   display: block;
   margin-right: 16px;
   min-width: 100px;
-  color: #666;
+  color: #276db0;
   font-size: 14px;
 }
 @media (min-width: 480px) {
@@ -1256,7 +1256,7 @@ article .content .caption {
   bottom: 0;
   margin-bottom: 10px;
   width: 100%;
-  color: #666;
+  color: #276db0;
   vertical-align: top;
   text-align: center;
   font-size: 12px;
@@ -1270,7 +1270,7 @@ article .content .caption {
   display: inline-block;
   margin-right: 15px;
   border-right: 1px solid;
-  border-color: #666;
+  border-color: #276db0;
   vertical-align: middle;
 }
 #footer li a {
@@ -1284,12 +1284,12 @@ article .content .caption {
   margin-right: 0;
 }
 #footer a {
-  color: #666;
+  color: #276db0;
   text-decoration: underline;
   background-image: none;
 }
 #footer a:hover {
-  color: #858585;
+  color: #3e8bd4;
 }
 #footer .footer-left {
   height: 20px;
@@ -1349,7 +1349,7 @@ article .content .caption {
   -moz-border-radius: 5px;
 }
 .search-input:focus {
-  border: solid 1px #2bbc8a;
+  border: solid 1px #49438a;
 }
 #search-result ul.search-result-list {
   padding: 0;
@@ -1373,8 +1373,8 @@ article .content .caption {
   font-size: 0.8em;
 }
 #search-result em.search-keyword {
-  border-bottom: 1px dashed #d480aa;
-  color: #d480aa;
+  border-bottom: 1px dashed #276db0;
+  color: #276db0;
   font-weight: bold;
 }
 .search-no-result {
@@ -1383,7 +1383,7 @@ article .content .caption {
   color: #383838;
 }
 #tag-cloud .tag-cloud-title {
-  color: #666;
+  color: #276db0;
 }
 #tag-cloud .tag-cloud-tags {
   clear: both;
@@ -1495,10 +1495,10 @@ article .content .caption {
   }
 }
 #categories .category-list-title {
-  color: #666;
+  color: #276db0;
 }
 #categories .category-list .category-list-item .category-list-count {
-  color: #666;
+  color: #276db0;
 }
 #categories .category-list .category-list-item .category-list-count:before {
   content: " (";
@@ -1569,7 +1569,7 @@ pre {
   overflow-x: auto;
   padding: 10px 15px;
   padding-bottom: 0;
-  border: 1px dotted #666;
+  border: 1px dotted #276db0;
   border-radius: 4px;
   font-size: 13px;
   font-family: "Menlo", "Meslo LG", monospace;
@@ -1583,7 +1583,7 @@ pre code {
 }
 code {
   padding: 0 5px;
-  border: 1px dotted #666;
+  border: 1px dotted #276db0;
   border-radius: 2px;
   -webkit-border-radius: 2px;
 }
@@ -1598,22 +1598,22 @@ code {
 }
 .highlight figcaption {
   margin: -5px 0 5px;
-  color: #757575;
+  color: #2c7cc8;
   font-size: 0.9em;
   transform: scale(1);
 }
 .highlight figcaption a {
   float: right;
-  color: #757575;
+  color: #2c7cc8;
   font-style: italic;
   font-size: 0.8em;
-  background-image: linear-gradient(transparent, transparent 10px, #d480aa 10px, #d480aa);
+  background-image: linear-gradient(transparent, transparent 10px, #276db0 10px, #276db0);
   background-position: bottom;
   background-size: 100% 6px;
   background-repeat: repeat-x;
 }
 .highlight figcaption a:hover {
-  color: #919191;
+  color: #5196d9;
 }
 .highlight figcaption:before,
 .highlight figcaption content: "" {
@@ -1633,7 +1633,7 @@ code {
   transition: opacity 0.2s ease-in;
 }
 .highlight .btn-copy:hover {
-  color: #2bbc8a;
+  color: #49438a;
 }
 .highlight pre {
   margin: 0;
