--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -167,7 +167,8 @@ pre
 
 code
   padding: 0 5px
-  border: 1px dotted $color-border
+  background: $color-background-code
+  border: none
   border-radius: 2px
   -webkit-border-radius: 2px
 
