--- a/themes/cactus/source/css/_colors/white.styl
+++ b/themes/cactus/source/css/_colors/white.styl
@@ -2,7 +2,7 @@
 $color-background = #FFFFFF
 $color-footer-mobile-1 = darken($color-background, 2%)
 $color-footer-mobile-2 = darken($color-background, 10%)
-$color-background-code = darken($color-background, 2%)
+$color-background-code = darken($color-background, 5%)
 $color-border = #276db0
 $color-scrollbar = #AAA
 $color-meta = #276db0
@@ -11,6 +11,6 @@ $color-link = #276db0
 $color-text = #383838
 $color-accent-3 = #8c8c8c
 $color-accent-2 = #383838
-$color-accent-1 = #49438a
+$color-accent-1 =#1c4d75
 $color-quote =  #276db0
 $highlight = hexo-config("highlight") || "atelier-cave-light"
