--- a/themes/cactus/source/css/_partial/header.styl
+++ b/themes/cactus/source/css/_partial/header.styl
@@ -11,7 +11,6 @@
     font-style: normal
     font-size: 1.5rem
     line-height: 2rem
-
     antialias()
 
   a
@@ -41,19 +40,24 @@
       margin: 0
       padding: 0
       list-style-type: none
-      line-height: 15px
+      line-height: 20px
 
       a
-        margin-right: 15px
+        margin-right: 20px
         color: $color-accent-1
 
       a:hover
+        background:  $color-accent-1
+        color:white
+        padding:5px
+        margin-right:15px
+        margin-left:-5px
         underline(5px, $color-accent-1)
 
       li
         display: inline-block
-        margin-right: 15px
-        border-right: 1px dotted
+        margin-right: 20px
+        border-right: 1.5px dashed
         border-color: $color-accent-1
         vertical-align: middle
 
