--- a/themes/cactus/layout/_partial/styles.ejs
+++ b/themes/cactus/layout/_partial/styles.ejs
@@ -31,3 +31,7 @@
       href="<%- url_for('/lib/font-awesome/css/all.min.css') %>"
   /></noscript>
 <% } %>
+
+<% if (page.layout === 'search') { %>
+  <link href="https://cdn.bootcss.com/flexboxgrid/6.3.1/flexboxgrid.min.css" rel="stylesheet">
+  <% } %>
