--- a/themes/cactus/source/css/_fonts.styl
+++ b/themes/cactus/source/css/_fonts.styl
@@ -1,4 +1,13 @@
 @font-face
   font-style: normal
-  font-family: "Meslo LG"
+  font-family: "Vazir"
   src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype")
+
+@font-face
+  font-family: Vazir
+  src: url('../lib/vazir-font/Vazir.eot')
+  src: url('../lib/vazir-font/Vazir.eot?#iefix') format('embedded-opentype'),
+       url('../lib/vazir-font/Vazir.woff2') format('woff2'),
+       url('../lib/vazir-font/Vazir.woff') format('woff'),
+       url('../lib/vazir-font/Vazir.ttf') format('truetype')
+  font-weight: normal
