--- a/themes/cactus/source/css/_partial/post/actions_desktop.styl
+++ b/themes/cactus/source/css/_partial/post/actions_desktop.styl
@@ -32,7 +32,7 @@
       vertical-align: middle
 
     li:last-child
-      margin-right: 0
+      margin-right: 0px
 
   #menu-icon
     float: right
@@ -64,8 +64,8 @@
     color: $color-accent-1
 
   #menu
-    display: none
-    margin-right: 2rem
+    display: inline-block
+    margin-right: 0.5rem
 
   #nav
     color: $color-accent-1
@@ -78,7 +78,7 @@
       line-height: 15px
 
       a
-        margin-right: 15px
+        margin-right: 10px
         color: $color-accent-1
 
       a:hover
