--- a/themes/cactus/source/css/_partial/search.styl
+++ b/themes/cactus/source/css/_partial/search.styl
@@ -1,46 +1,54 @@
 .search-input
-  padding: 4px 7px
+  font-size: 0.875rem
+  height: 2.75rem
+  border-width: 1px
+  display: block
+  font-family: inherit
+  padding: 0.5rem
   width: 100%
-  outline: none
-  border: solid 1px $color-accent-3
-  border-radius: 5px
-  background-color: $color-background
-  color: $color-text
-  font-size: 1.2rem
-  -webkit-border-radius: 5px
-  -moz-border-radius: 5px
+.reset-button
+  height: 1.75rem
+  color: #fff
+  background-color: #2bbc8a;
+  padding: 0 16px
+  font-size:.8em
+  border:1px solid #2bbc8a;
+  border-radius:2px;
+  font-family: inherit
+  font-weight: bold
 
-  &:focus
-    border: solid 1px $color-accent-1
-
-#search-result
-  ul.search-result-list
-    padding: 0
-    list-style-type: none
-
-  li
-    margin: 2em auto
-
-  a.search-result-title
-    background-image: none
-    color: $color-text
-    text-transform: capitalize
-    font-weight: bold
-    line-height: 1.2
-
-  p.search-result
-    overflow: hidden
-    margin: .4em auto
-    max-height: 13em
-    text-align: justify
-    font-size: .8em
-
-  em.search-keyword
-    border-bottom: 1px dashed $color-link
-    color: $color-link
-    font-weight: bold
-
-.search-no-result
-  display: none
-  padding-bottom: .5em
-  color: $color-text
+#search-result ul.search-result-list {
+  list-style-type:none;
+  padding: 0px;
+}
+#search-result li {
+  margin: 2em auto;
+  border-bottom: 2px solid #276db0;
+}
+#search-result .search-result-list li:hover {
+  color:#eee
+}
+#search-result a.search-result-title {
+  line-height: 1.2;
+  font-weight: bold;
+  color: #276db0;
+}
+#search-result p.search-result {
+  margin: 0.4em auto;
+  max-height: 13em;
+  overflow: hidden;
+  font-size: 0.8em;
+  text-align: justify;
+}
+#search-result em.search-keyword {
+  color: #f58e90;
+  border-bottom: 1px dashed #f58e90;
+  font-weight: bold;
+  font-size: 0.85em;
+}
+p.no-result {
+  display: none;
+  padding-bottom: 0.5em;
+  color: #eee;
+  border-bottom: 2px solid #276db0;
+}
