--- a/css/style.css
+++ b/css/style.css
@@ -436,8 +436,69 @@ body td {
 }
 @font-face {
   font-style: normal;
-  font-family: "Meslo LG";
+  font-family: "Vazir";
   src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: Vazir;
+  src: url("../lib/vazir-font/Vazir.eot");
+  src: url("../lib/vazir-font/Vazir.eot?#iefix") format('embedded-opentype'), url("../lib/vazir-font/Vazir.woff2") format('woff2'), url("../lib/vazir-font/Vazir.woff") format('woff'), url("../lib/vazir-font/Vazir.ttf") format('truetype');
+  font-weight: normal;
+}
+.search-input {
+  font-size: 0.875rem;
+  height: 2.75rem;
+  border-width: 1px;
+  display: block;
+  font-family: inherit;
+  padding: 0.5rem;
+  width: 100%;
+}
+.reset-button {
+  height: 1.75rem;
+  color: #fff;
+  background-color: #2bbc8a;
+  padding: 0 16px;
+  font-size: 0.8em;
+  border: 1px solid #2bbc8a;
+  border-radius: 2px;
+  font-family: inherit;
+  font-weight: bold;
+}
+#search-result ul.search-result-list {
+  list-style-type: none;
+  padding: 0px;
+}
+#search-result li {
+  margin: 2em auto;
+  border-bottom: 2px solid #276db0;
+}
+#search-result .search-result-list li:hover {
+  color: #eee;
+}
+#search-result a.search-result-title {
+  line-height: 1.2;
+  font-weight: bold;
+  color: #276db0;
+}
+#search-result p.search-result {
+  margin: 0.4em auto;
+  max-height: 13em;
+  overflow: hidden;
+  font-size: 0.8em;
+  text-align: justify;
+}
+#search-result em.search-keyword {
+  color: #f58e90;
+  border-bottom: 1px dashed #f58e90;
+  font-weight: bold;
+  font-size: 0.85em;
+}
+p.no-result {
+  display: none;
+  padding-bottom: 0.5em;
+  color: #eee;
+  border-bottom: 2px solid #276db0;
 }
 *,
 *:before,
@@ -734,7 +795,7 @@ body {
   vertical-align: middle;
 }
 #header-post ul li:last-child {
-  margin-right: 0;
+  margin-right: 0px;
 }
 #header-post #menu-icon {
   float: right;
@@ -766,8 +827,8 @@ body {
   color: #1c4d75;
 }
 #header-post #menu {
-  display: none;
-  margin-right: 2rem;
+  display: inline-block;
+  margin-right: 0.5rem;
 }
 #header-post #nav {
   color: #1c4d75;
@@ -780,7 +841,7 @@ body {
   line-height: 15px;
 }
 #header-post #nav ul a {
-  margin-right: 15px;
+  margin-right: 10px;
   color: #1c4d75;
 }
 #header-post #nav ul a:hover {
@@ -1342,50 +1403,59 @@ article .content .caption {
   color: #383838;
 }
 .search-input {
-  padding: 4px 7px;
+  font-size: 0.875rem;
+  height: 2.75rem;
+  border-width: 1px;
+  display: block;
+  font-family: inherit;
+  padding: 0.5rem;
   width: 100%;
-  outline: none;
-  border: solid 1px #8c8c8c;
-  border-radius: 5px;
-  background-color: #fff;
-  color: #383838;
-  font-size: 1.2rem;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
 }
-.search-input:focus {
-  border: solid 1px #1c4d75;
+.reset-button {
+  height: 1.75rem;
+  color: #fff;
+  background-color: #2bbc8a;
+  padding: 0 16px;
+  font-size: 0.8em;
+  border: 1px solid #2bbc8a;
+  border-radius: 2px;
+  font-family: inherit;
+  font-weight: bold;
 }
 #search-result ul.search-result-list {
-  padding: 0;
   list-style-type: none;
+  padding: 0px;
 }
 #search-result li {
   margin: 2em auto;
+  border-bottom: 2px solid #276db0;
+}
+#search-result .search-result-list li:hover {
+  color: #eee;
 }
 #search-result a.search-result-title {
-  background-image: none;
-  color: #383838;
-  text-transform: capitalize;
-  font-weight: bold;
   line-height: 1.2;
+  font-weight: bold;
+  color: #276db0;
 }
 #search-result p.search-result {
-  overflow: hidden;
   margin: 0.4em auto;
   max-height: 13em;
-  text-align: justify;
+  overflow: hidden;
   font-size: 0.8em;
+  text-align: justify;
 }
 #search-result em.search-keyword {
-  border-bottom: 1px dashed #276db0;
-  color: #276db0;
+  color: #f58e90;
+  border-bottom: 1px dashed #f58e90;
   font-weight: bold;
+  font-size: 0.85em;
 }
-.search-no-result {
+p.no-result {
   display: none;
   padding-bottom: 0.5em;
-  color: #383838;
+  color: #eee;
+  border-bottom: 2px solid #276db0;
 }
 #tag-cloud .tag-cloud-title {
   color: #276db0;
