--- a/themes/cactus/layout/index.ejs
+++ b/themes/cactus/layout/index.ejs
@@ -57,7 +57,7 @@
     <% show_posts.each(function(post, i){ %>
       <li class="post-item">
         <%- partial('_partial/post/date', { post: post, class_name: 'meta' }) %>
-        <span><%- partial('_partial/post/title', { post: post, index: true, class_name: '' }) %></span>
+        <span class="post-span"><%- partial('_partial/post/title', { post: post, index: true, class_name: 'post-link' }) %></span>
       </li>
     <% }); %>
   </ul>
