--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -69,6 +69,9 @@ body
   min-height: 100%
   overflow-wrap: break-word
 
+  .about-date
+    color: $color-meta
+
   p
     hyphens(auto)
 
@@ -77,12 +80,13 @@ body
 
   a
     color: $color-text
-    text-decoration: none
-
-    underline(5px, $color-text)
+    text-decoration: underline
 
     &:hover
-      background-image: linear-gradient(transparent, transparent 4px, $color-link 4px, $color-link)
+      background-color: $color-accent-1
+      color: white
+
+
 
   a.icon
     background: none
