font change Noto SC

--- a/themes/cactus/source/css/_fonts.styl
+++ b/themes/cactus/source/css/_fonts.styl
@@ -11,3 +11,14 @@
        url('../lib/vazir-font/Vazir.woff') format('woff'),
        url('../lib/vazir-font/Vazir.ttf') format('truetype')
   font-weight: normal
+
+
+@font-face {
+    font-family: 'NotoS';
+    src: url('../lib/Noto_Serif_SC/NotoSerifSC-Medium.otf') format('opentype')
+         url('../lib/Noto_Serif_SC/NotoSerifSC-Regular.otf')format('opentype')
+         url('../lib/Noto_Serif_SC/NotoSerifSC-SemiBold.otf')format('opentype')
+         url('../lib/Noto_Serif_SC/NotoSerifSC-Bold.otf')format('opentype')
+    font-weight: normal;
+    font-style: normal;
+}
