--- a/themes/cactus/source/css/_partial/post/actions_desktop.styl
+++ b/themes/cactus/source/css/_partial/post/actions_desktop.styl
@@ -123,8 +123,8 @@
     clear: both
     overflow: auto
     margin-top: 1rem
-    padding-right: 2rem
-    max-width: 20em
+    padding-right: 0rem
+    max-width: 18em
     max-height: calc(95vh - 7rem)
     text-align: right
 
@@ -140,7 +140,7 @@
 
       &:before
         color: $color-accent-1
-        content: "#"
+        content: ""
 
     .toc-level-3
       color: $color-meta
