--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -82,9 +82,9 @@ body
     color: $color-text
     text-decoration: underline
 
-    &:hover
-      background-color: $color-accent-1
-      color: white
+  a:hover
+    background-color: $color-accent-1
+    color: white
 
 
 
