--- a/themes/cactus/layout/_partial/footer.ejs
+++ b/themes/cactus/layout/_partial/footer.ejs
@@ -5,6 +5,7 @@
     <% var startYear = (theme.copyright && theme.copyright.start_year) ? theme.copyright.start_year : new Date().getFullYear() %>
     <%= startYear >= endYear ? endYear : startYear + "-" + endYear %>
     <%= config.author || config.title %>
+   
   </div>
   <div class="footer-right">
     <nav>
@@ -12,6 +13,7 @@
         <% for (var i in theme.nav) { %><!--
        --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
      --><% } %>
+          <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
       </ul>
     </nav>
   </div>
