--- a/themes/cactus/layout/_partial/header.ejs
+++ b/themes/cactus/layout/_partial/header.ejs
@@ -23,6 +23,7 @@
       <% for (var i in theme.nav) { %><!--
      --><li><a href="<%- url_for(theme.nav[i]) %>"><%= __('nav.'+i).replace("nav.", "") %></a></li><!--
    --><% } %>
+    <li><a href="/search/"><i class="fa-solid fa-magnifying-glass"></i></a></li>
     </ul>
   </div>
 </header>
