--- a/themes/cactus/source/css/_partial/header.styl
+++ b/themes/cactus/source/css/_partial/header.styl
@@ -72,7 +72,7 @@
           margin-right: 0
 
 
-@media screen and (max-width: 480px)
+@media screen and (max-width: 575px)
   #header 
     a
       width: 100%
@@ -97,11 +97,15 @@
       li
         display:inline-block
         padding: 0
-        margin: 0
+        margin-right: 0 px
         border: none
 
+        a
+          padding: 0
+          margin: 0.4rem
 
-@media screen and (max-width: 400px)
+
+@media screen and (max-width: 405px)
   #header 
     a
       width: 100%
