--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -86,7 +86,11 @@ body
     background-color: $color-accent-1
     color: white
 
+  a.category-list-link
+    text-decoration: none
 
+  .tag-cloud-tags a
+    text-decoration: none
 
   a.icon
     background: none
@@ -241,4 +245,5 @@ code
 
   .line
     height: 22px
+
 
