deploy: e17e996e346c10b4469b91c9b36ff20bcdb3ce93

--- a/css/style.css
+++ b/css/style.css
@@ -587,6 +587,12 @@ body {
   background-color: #1c4d75;
   color: #fff;
 }
+.content a.category-list-link {
+  text-decoration: none;
+}
+.content .tag-cloud-tags a {
+  text-decoration: none;
+}
 .content a.icon {
   background: none;
 }
