--- a/themes/cactus/source/css/_partial/header.styl
+++ b/themes/cactus/source/css/_partial/header.styl
@@ -103,6 +103,13 @@
         a
           padding: 0
           margin: 0.4rem
+        
+        a:hover
+          background: none
+          color: inherit
+          text-decoration: none
+          padding:0px
+          margin: 0.4rem
 
 
 @media screen and (max-width: 405px)
@@ -116,6 +123,7 @@
     #title
       display: table-cell
       vertical-align: middle
+
 
   #header #nav
     ul 
@@ -132,5 +140,13 @@
         padding: 0
         margin: 0
         border: none
+
+        a:hover
+          background: none
+          color: inherit
+          text-decoration: none
+          padding:0px
+          margin: 0.4rem
+         
 
 
