--- a/css/style.css
+++ b/css/style.css
@@ -729,7 +729,7 @@ body {
   margin-right: 20px;
   border-right: 1.5px dashed;
   border-color: #1c4d75;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 #header #nav ul .icon {
   display: none;
@@ -773,22 +773,26 @@ body {
   }
   #header #nav ul li a {
     padding: 0;
-    margin: 0.4rem;
+    margin-right: 0.8rem;
   }
   #header #nav ul li a:hover {
     background: none;
     color: inherit;
     text-decoration: none;
     padding: 0px;
-    margin: 0.4rem;
+    margin-right: 0.8rem;
+    margin-left: 0;
+  }
+  #header #nav ul li:last-child a:hover {
+    margin-right: 0rem;
   }
 }
-@media screen and (max-width: 405px) {
+@media screen and (max-width: 413px) {
   #header {
     min-height: 60px;
   }
   #header a {
-    width: 100%;
+    padding: 0;
   }
   #header a #logo {
     display: none;
@@ -818,7 +822,11 @@ body {
     color: inherit;
     text-decoration: none;
     padding: 0px;
-    margin: 0.4rem;
+    margin-right: 0.8rem;
+    margin-left: 0;
+  }
+  #header #nav ul li:last-child a:hover {
+    margin-right: 0rem;
   }
 }
 #header-post {
