--- a/themes/cactus/layout/index.ejs
+++ b/themes/cactus/layout/index.ejs
@@ -79,7 +79,7 @@
 <% } %>
 
 
-<section id="categories" class="left">
+<!-- <section id="categories" class="left">
   <div class="category-list-title">
       <span class="h1"><a href="<%- url_for("categories") %>"><%= __('Categories') %></a></span>
       <% var visibleCategories = 0 %>
@@ -93,8 +93,10 @@
   <div class="category-list">
     <%- list_categories() %>
   </div>
-</section>
+</section> -->
 
+<section>
+</section>
 
 
 
