--- a/themes/cactus/layout/post.ejs
+++ b/themes/cactus/layout/post.ejs
@@ -12,7 +12,7 @@
       <%- partial('_partial/post/tag') %>
 
       
-      <span class="post-count">Word Count: <%= wordcount(page.content) %>. Time to Read: <%= min2read(page.content) %> min.</span>
+      <span class="post-count">Word Count: <%= wordcount(page.content) %> | Time to Read: <%= min2read(page.content) %> min</span>
     </div>
   </header>
   <%- partial('_partial/post/gallery') %>
