--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -259,3 +259,19 @@ code
 .post-count{
   display:block
 }
+
+.about-p{
+  margin: -0.5rem
+  border-left: 1px solid #81d4b4
+  padding: 0.8rem
+}
+
+.dot{
+  border:3px solid $color-meta
+  display:inline-block
+  border-radius: 50%
+  width:10px
+  height:10px
+  margin:0
+  margin-left:-0.75rem
+}
