--- a/css/style.css
+++ b/css/style.css
@@ -1894,3 +1894,17 @@ code {
 .post-count {
   display: block;
 }
+.about-p {
+  margin: -0.5rem;
+  border-left: 1px solid #81d4b4;
+  padding: 0.8rem;
+}
+.dot {
+  border: 3px solid #276db0;
+  display: inline-block;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin: 0;
+  margin-left: -0.75rem;
+}
