--- a/themes/butterfly/layout/includes/widget/card_author.pug
+++ b/themes/butterfly/layout/includes/widget/card_author.pug
@@ -25,3 +25,23 @@ if theme.aside.card_author.enable
     if(theme.social)
         .card-info-social-icons.is-center
           !=fragment_cache('social', function(){return partial('includes/header/social')}) 
+
+//-     .xpand(style='height:10px;')
+//-   canvas.illo(width='800' height='800' style='max-width: 100px; max-height: 100px; touch-action: none; width: 640px; height: 640px;')
+//- script(src='https://fastly.jsdelivr.net/gh/xiaopengand/blogCdn@latest/xzxr/twopeople1.js')
+//- script(src='https://fastly.jsdelivr.net/gh/xiaopengand/blogCdn@latest/xzxr/zdog.dist.js')
+//- script#rendered-js(src='https://fastly.jsdelivr.net/gh/xiaopengand/blogCdn@latest/xzxr/twopeople.js')
+//- style.
+//-   .card-widget.card-announcement {
+//-   margin: 0;
+//-   align-items: center;
+//-   justify-content: center;
+//-   text-align: center;
+//-   }
+//-   canvas {
+//-   display: block;
+//-   margin: 0 auto;
+//-   cursor: move;
+//-   }
+
+
