--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -22,6 +22,7 @@
     overflow: hidden
     margin-top: 20px
     padding: 20px 24px
+    border-left: 3px solid $bright-blue
 
     if hexo-config('aside.mobile') == false
       +maxWidth768()
