--- a/themes/butterfly/source/css/var.styl
+++ b/themes/butterfly/source/css/var.styl
@@ -49,8 +49,8 @@ $text-hover = $theme-color
 $text-bg-hover = $theme-color
 // code
 $line-height-code-block = 1.6
-$blockquote-color = #6a737d
-$blockquote-padding-color = $themeColorEnable && hexo-config('theme_color.blockquote_padding_color') ? convert(hexo-config('theme_color.blockquote_padding_color')) : #49B1F5
+$blockquote-color = #636363
+$blockquote-padding-color = #50c7a5
 $blockquote-background-color = $themeColorEnable && hexo-config('theme_color.blockquote_background_color') ? alpha(convert(hexo-config('theme_color.blockquote_background_color')), .1) : alpha($blockquote-padding-color, .1)
 // page
 $body-bg = #fff
