--- a/themes/butterfly/source/css/_search/local-search.styl
+++ b/themes/butterfly/source/css/_search/local-search.styl
@@ -1,16 +1,18 @@
 #local-search
   .search-dialog
+    border-radius:0
     .local-search-box
       margin: 0 auto
       max-width: 100%
       width: 100%
+    
 
       input
         padding: 5px 14px
         width: 100%
         outline: none
         border: 1px solid $search-color
-        border-radius: 40px
+        border-radius: 2px
         background: var(--search-bg)
         color: var(--search-input-color)
         -webkit-appearance: none
