--- a/themes/butterfly/source/css/_layout/aside.styl
+++ b/themes/butterfly/source/css/_layout/aside.styl
@@ -22,7 +22,7 @@
     overflow: hidden
     margin-top: 20px
     padding: 20px 24px
-    border-left: 3px solid $bright-blue
+    border-radius: 0
 
     if hexo-config('aside.mobile') == false
       +maxWidth768()
