--- a/css/index.css
+++ b/css/index.css
@@ -3800,6 +3800,9 @@ h1.page-title + .tag-cloud-list {
 #article-container > :last-child {
   margin-bottom: 0 !important;
 }
+#post {
+  border-radius: 0;
+}
 #post .tag_share:after {
   display: block;
   clear: both;
