--- a/themes/3-hexo/source/css/mobile.styl
+++ b/themes/3-hexo/source/css/mobile.styl
@@ -1,6 +1,7 @@
+@import "_fonts.styl"
 @media screen and (max-width 1468px)
   html, body
-    font 400 15px/1 "Open Sans", "Hiragino Sans GB", sans-serif
+    font 400 13px/1 "NotoS"
   .nav
     width 492px
     &.fullscreen
