--- a/themes/3-hexo/source/css/style.styl
+++ b/themes/3-hexo/source/css/style.styl
@@ -1,11 +1,21 @@
 @import "_partial/*"
+@import "_fonts.styl"
+
+#post{
+  font-family:"NotoS"
+}
+
+
+code{
+  font-family:monospace
+}
 
 html, body
   width 100%
   height 100%
   margin 0
   color #283444
-  font 400 16px/1 "Open Sans","Hiragino Sans GB",sans-serif
+  font 400 14px/1 "NotoS"
   -webkit-font-smoothing subpixel-antialiased
   -webkit-text-size-adjust none
   overflow hidden
