--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -169,7 +169,7 @@ pre
   border: 1px dotted $color-border
   border-radius: 4px
   font-size: 13px
-  font-family: $font-family-mono
+  font-family: "NotoS"
   line-height: 22px
   -webkit-border-radius: 4px
 
