deploy: 41a2590bbf1ac5a0f3979267b167e94809d535e7

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,7 +1,24 @@
+@font-face {
+  font-style: normal;
+  font-family: "Vazir";
+  src: local("Meslo LG S"), url("../lib/meslo-LG/MesloLGS-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: Vazir;
+  src: url("../lib/vazir-font/Vazir.eot");
+  src: url("../lib/vazir-font/Vazir.eot?#iefix") format('embedded-opentype'), url("../lib/vazir-font/Vazir.woff2") format('woff2'), url("../lib/vazir-font/Vazir.woff") format('woff'), url("../lib/vazir-font/Vazir.ttf") format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'NotoS';
+  src: url("../lib/Noto_Serif_SC/NotoSerifSC-Medium.otf") format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
 @media screen and (max-width: 1468px) {
   html,
   body {
-    font: 400 15px/1 "Open Sans", "Hiragino Sans GB", sans-serif;
+    font: 400 13px/1 "NotoS";
   }
   .nav {
     width: 492px;
